--- a/SierpinskiAttractor/MainWindow.xaml
+++ b/SierpinskiAttractor/MainWindow.xaml
@@ -1,8 +1,22 @@
 ﻿<Window x:Class="SierpinskiAttractor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="800" Width="500" ResizeMode="NoResize">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="9*"/>
+            <RowDefinition Height="184*"/>
+        </Grid.RowDefinitions>
+        <ComboBox HorizontalAlignment="Left" Margin="118,426.806,0,0" VerticalAlignment="Top" Width="120" Grid.Row="1"/>
+        <RadioButton Content="Square" HorizontalAlignment="Left" Margin="29,422.806,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+        <RadioButton Content="Ellipse" HorizontalAlignment="Left" Margin="29,443.806,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+        <Label Content="Shape" HorizontalAlignment="Left" Margin="29,395.806,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+        <Label Content="Color" HorizontalAlignment="Left" Margin="118,395.806,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+        <Button Content="Run" HorizontalAlignment="Left" Margin="295,395.806,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.504,0.286" Grid.Row="1"/>
+        <Button Content="Clear" HorizontalAlignment="Left" Margin="295,422.806,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.516,0.613" Grid.Row="1"/>
+        <Canvas HorizontalAlignment="Left" Height="401" Margin="10,10,0,0" VerticalAlignment="Top" Width="474" Grid.RowSpan="2"/>
+        <Button Content="About" HorizontalAlignment="Left" Height="27" Margin="163,699,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" RenderTransformOrigin="1.428,0.321"/>
+        <Button Content="Usage" HorizontalAlignment="Left" Margin="259,699,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75"/>
+
     </Grid>
 </Window>
