some more gui stuff

--- a/SierpinskiAttractor/MainWindow.xaml
+++ b/SierpinskiAttractor/MainWindow.xaml
@@ -2,21 +2,22 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="500" Width="800" ResizeMode="NoResize">
-    <Grid>
+    <Grid Background="#FFEEEEEE">
         <Grid.RowDefinitions>
-            <RowDefinition Height="9*"/>
-            <RowDefinition Height="184*"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="115*"/>
         </Grid.RowDefinitions>
-        <ComboBox HorizontalAlignment="Left" Margin="109,240,0,0" VerticalAlignment="Top" Width="120" Grid.Row="1"/>
-        <RadioButton Content="Square" HorizontalAlignment="Left" Margin="20,236,0,0" VerticalAlignment="Top" Grid.Row="1"/>
-        <RadioButton Content="Ellipse" HorizontalAlignment="Left" Margin="20,257,0,0" VerticalAlignment="Top" Grid.Row="1"/>
-        <Label Content="Shape" HorizontalAlignment="Left" Margin="20,209,0,0" VerticalAlignment="Top" Grid.Row="1"/>
-        <Label Content="Color" HorizontalAlignment="Left" Margin="109,209,0,0" VerticalAlignment="Top" Grid.Row="1"/>
-        <Button Content="Run" HorizontalAlignment="Left" Margin="286,209,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.504,0.286" Grid.Row="1"/>
-        <Button Content="Clear" HorizontalAlignment="Left" Margin="286,236,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.516,0.613" Grid.Row="1"/>
-        <Canvas HorizontalAlignment="Left" Height="223" Margin="10,10,0,0" VerticalAlignment="Top" Width="474" Grid.RowSpan="2"/>
-        <Button Content="About" HorizontalAlignment="Left" Height="27" Margin="517,361,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" RenderTransformOrigin="1.428,0.321" Click="About_Click" />
-        <Button Content="Usage" HorizontalAlignment="Left" Margin="613,361,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Click="Usage_Click"/>
+        <ComboBox HorizontalAlignment="Left" Margin="650,70,0,0" VerticalAlignment="Top" Width="120" Grid.Row="1" Height="22"/>
+        <RadioButton Content="Square" HorizontalAlignment="Left" Margin="528,75,0,0" VerticalAlignment="Top" Grid.Row="1" Height="16" Width="53"/>
+        <RadioButton Content="Ellipse" HorizontalAlignment="Left" Margin="528,96,0,0" VerticalAlignment="Top" Grid.Row="1" Height="16" Width="49"/>
+        <Label Content="Shape" HorizontalAlignment="Left" Margin="465,70,0,0" VerticalAlignment="Top" Grid.Row="1" Height="26" Width="43" FontWeight="Bold"/>
+        <Label Content="Color" HorizontalAlignment="Left" Margin="606,70,0,0" VerticalAlignment="Top" Grid.Row="1" Height="26" Width="39" FontWeight="Bold"/>
+        <Button Content="Run" HorizontalAlignment="Left" Margin="465,153,0,0" VerticalAlignment="Top" Width="140" RenderTransformOrigin="0.504,0.286" Grid.Row="1" Height="22" Click="Run_Click"/>
+        <Button Content="Clear" HorizontalAlignment="Left" Margin="630,153,0,0" VerticalAlignment="Top" Width="140" RenderTransformOrigin="0.516,0.613" Grid.Row="1" Height="22" Click="Clear_Click"/>
+        <Canvas HorizontalAlignment="Left" Height="435" Margin="10,0,0,0" VerticalAlignment="Top" Width="450" Grid.Row="1" Background="White"/>
+        <Button Content="About" HorizontalAlignment="Left" Height="27" Margin="517,417,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" RenderTransformOrigin="1.428,0.321" Click="About_Click" />
+        <Button Content="Usage" HorizontalAlignment="Left" Margin="613,417,0,0" Grid.Row="1" VerticalAlignment="Top" Width="86" Click="Usage_Click" Height="27"/>
+        <Label Content="Sierpinski Attractor" HorizontalAlignment="Left" Margin="465,10,0,0" Grid.Row="1" VerticalAlignment="Top" FontWeight="Bold" FontSize="18"/>
 
     </Grid>
 </Window>
