--- a/SierpinskiAttractor/MainWindow.xaml
+++ b/SierpinskiAttractor/MainWindow.xaml
@@ -2,52 +2,55 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="500" Width="800" ResizeMode="NoResize">
-    <Grid x:Name="Layout" Background="White">
-        <Canvas HorizontalAlignment="Left" Height="37" Margin="455,-1,0,0" VerticalAlignment="Top" Width="339" Background="#FF6699CC">
-            <Label Content="Sierpinski Attractor" HorizontalAlignment="Left" VerticalAlignment="Top" FontWeight="Bold" FontSize="18" Canvas.Left="2" Foreground="White"/>
-        </Canvas>
-
-        <Canvas Canvas.Left="441" Canvas.Top="439" Width="355" Background="#FF6699CC" Margin="439,427,0,30" RenderTransformOrigin="0.5,0.5">
-            <Canvas.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleY="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Canvas.RenderTransform>
-        </Canvas>
-        <Label x:Name="pointLabel" Content="Add New Point" HorizontalAlignment="Left" Margin="460,83,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" FontSize="16"/>
-
-        <Label Content="Color" HorizontalAlignment="Left" Margin="460,133,0,0" VerticalAlignment="Top" Height="26" Width="46" FontWeight="Bold" FontSize="14"/>
-        <Label Content="Red" HorizontalAlignment="Left" Margin="462,164,0,0" VerticalAlignment="Top"/>
-        <Label Content="Green" HorizontalAlignment="Left" Margin="563,164,0,0" VerticalAlignment="Top"/>
-        <Label Content="Blue" HorizontalAlignment="Left" Margin="675,165,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="rVal" HorizontalAlignment="Left" Margin="498,168,0,0" VerticalAlignment="Top" Width="60" Height="20" Uid="rVal" Loaded="Color_Load" SelectedIndex="0" SelectionChanged="Color_Changed"/>
-        <ComboBox x:Name="bVal" HorizontalAlignment="Left" Margin="713,167,0,0" VerticalAlignment="Top" Width="60"  Uid="bVal" Loaded="Color_Load" SelectedIndex="0" SelectionChanged="Color_Changed" Height="20"/>
-        <ComboBox x:Name="gVal" HorizontalAlignment="Left" Margin="610,168,0,0" VerticalAlignment="Top" Width="60"  Uid="gVal" Loaded="Color_Load" SelectedIndex="0" SelectionChanged="Color_Changed" Height="20"/>
-        <Label Name ="previewColor" Content="Preview:" HorizontalAlignment="Left" Margin="657,214,0,0" VerticalAlignment="Top" Width="81" Height="28"/>
-        <Rectangle x:Name="colorPreview" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="20" Margin="713,218,0,0" Stroke="Black" VerticalAlignment="Top" Width="60" Uid="colorPreview"/>
-
-        <Label Content="Size" HorizontalAlignment="Left" Margin="460,258,0,0" VerticalAlignment="Top" Height="26" Width="43" FontWeight="Bold" FontSize="14" RenderTransformOrigin="-0.302,0.615"/>
-        <RadioButton x:Name="sizeS" GroupName="Size" Content="Small" HorizontalAlignment="Left" Margin="467,289,0,0" VerticalAlignment="Top" Height="16" Width="60" IsChecked="True" Checked="Size_Checked" Padding="4,0,0,0"/>
-        <RadioButton x:Name="sizeM" GroupName="Size" Content="Medium" HorizontalAlignment="Left" Margin="545,289,0,0" VerticalAlignment="Top" Height="16" Width="60" IsChecked="False" Checked="Size_Checked"/>
-        <RadioButton x:Name="sizeL" GroupName="Size" Content="Large" HorizontalAlignment="Left" Margin="639,289,0,0" VerticalAlignment="Top" IsChecked="False" Checked="Size_Checked" Width="60"/>
-
-        <Button Content="Run" HorizontalAlignment="Left" Margin="471,366,0,0" VerticalAlignment="Top" Width="140" RenderTransformOrigin="0.504,0.286" Height="22" Click="Run_Click"/>
-        <Button Content="Clear" HorizontalAlignment="Left" Margin="633,366,0,0" VerticalAlignment="Top" Width="140" RenderTransformOrigin="0.516,0.613" Height="22" Click="Clear_Click"/>
-        <Canvas Name ="DaCanvas" HorizontalAlignment="Left" Height="472" VerticalAlignment="Top" Width="455" Background="#FFDDDDDD"
+    <Grid Background="#FFEEEEEE">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="115*"/>
+        </Grid.RowDefinitions>
+        <ComboBox HorizontalAlignment="Left" Margin="520,80,0,0" VerticalAlignment="Top" Width="49" Grid.Row="1" Height="22"/>
+        <RadioButton Content="2" HorizontalAlignment="Left" Margin="488,218,0,0" VerticalAlignment="Top" Grid.Row="1" Height="16" Width="53"/>
+        <RadioButton Content="4" HorizontalAlignment="Left" Margin="554,218,0,0" VerticalAlignment="Top" Grid.Row="1" Height="16" Width="49"/>
+        <Label Content="Size" HorizontalAlignment="Left" Margin="476,189,0,0" VerticalAlignment="Top" Grid.Row="1" Height="26" Width="43" FontWeight="Bold"/>
+        <Label Content="Color" HorizontalAlignment="Left" Margin="476,49,0,0" VerticalAlignment="Top" Grid.Row="1" Height="26" Width="39" FontWeight="Bold"/>
+        <Button Content="Run" HorizontalAlignment="Left" Margin="472,270,0,0" VerticalAlignment="Top" Width="140" RenderTransformOrigin="0.504,0.286" Grid.Row="1" Height="22" Click="Run_Click"/>
+        <Button Content="Clear" HorizontalAlignment="Left" Margin="637,270,0,0" VerticalAlignment="Top" Width="140" RenderTransformOrigin="0.516,0.613" Grid.Row="1" Height="22" Click="Clear_Click"/>
+        <Canvas Name ="DaCanvas" HorizontalAlignment="Left" Height="435" Margin="10,0,0,0" VerticalAlignment="Top" Width="450" Grid.Row="1" Background="Gray"
                 MouseMove="DaCanvas_MouseMove_1"
                 MouseRightButtonUp="setControlPoint"
                 MouseLeftButtonDown="dragPoint"
                 MouseLeftButtonUp="releasePoint"
                 />
         <!--changed canvas background to gray so i can see the smaller shapes, can change after-->
-        <Label Name="mousePos" Content="Mouse at (0,0)" HorizontalAlignment="Left" Height="27" Margin="657,52,0,0" VerticalAlignment="Top"/>
-        <Label Name ="Indexshape" Content="Control Points: 0" HorizontalAlignment="Left" Margin="458,52,0,0" VerticalAlignment="Top"/>
-        <Label Content="About" HorizontalAlignment="Left" VerticalAlignment="Top" MouseLeave="CursorOut" MouseEnter="CursorOver"  MouseLeftButtonDown="About_Click" FontSize="10" Foreground="#FF6699CC" Margin="582,435,0,0" RenderTransformOrigin="0.595,1.652" />
-        <Label Content="Usage" HorizontalAlignment="Left" VerticalAlignment="Top" MouseLeave="CursorOut" MouseEnter="CursorOver" MouseLeftButtonDown="Usage_Click" FontSize="10" Foreground="#FF6699CC" RenderTransformOrigin="0.405,0.174" Margin="624,435,0,0"/>
-        <Label x:Name="StatusLabel" Content="Label" HorizontalAlignment="Left" Margin="471,388,0,0" VerticalAlignment="Top" Foreground="Red" Visibility="Hidden"/>
+        <Button Content="About" HorizontalAlignment="Left" Height="27" Margin="517,417,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" RenderTransformOrigin="1.428,0.321" Click="About_Click" />
+        <Button Content="Usage" HorizontalAlignment="Left" Margin="613,417,0,0" Grid.Row="1" VerticalAlignment="Top" Width="86" Click="Usage_Click" Height="27"/>
+        <Label Content="Sierpinski Attractor" HorizontalAlignment="Left" Margin="465,10,0,0" Grid.Row="1" VerticalAlignment="Top" FontWeight="Bold" FontSize="18"/>
+        <ComboBox HorizontalAlignment="Left" Margin="729,82,0,0" Grid.Row="1" VerticalAlignment="Top" Width="49" RenderTransformOrigin="0.5,0.5">
+            <ComboBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.484"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </ComboBox.RenderTransform>
+        </ComboBox>
+        <ComboBox HorizontalAlignment="Left" Margin="633,80,0,0" Grid.Row="1" VerticalAlignment="Top" Width="35"/>
+        <Label Content="Red" HorizontalAlignment="Left" Margin="484,80,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Content="Green" HorizontalAlignment="Left" Margin="586,80,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Content="Blue" HorizontalAlignment="Left" Margin="687,80,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <RadioButton Content="6" HorizontalAlignment="Left" Margin="614,218,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Name ="previewColor" Content="Preview:" HorizontalAlignment="Left" Margin="476,111,0,0" Grid.Row="1" VerticalAlignment="Top" Width="81" Height="28"/>
+        <RadioButton Name ="circle" Content="Circle" HorizontalAlignment="Left" Margin="562,167,0,0" Grid.Row="1" VerticalAlignment="Top"
+                     IsChecked="True"
+                     Checked="circle_Checked"/>
+        <Label Name ="shape" Content="Shape" HorizontalAlignment="Left" Margin="476,157,0,0" Grid.Row="1" VerticalAlignment="Top" FontWeight="Bold"/>
+        <RadioButton Name ="square" Content="Square" HorizontalAlignment="Left" Margin="665,167,0,0" Grid.Row="1" VerticalAlignment="Top"
+                     Checked="square_Checked"/>
+        <Label Content="Color preview Here" HorizontalAlignment="Left" Margin="573,113,0,0" Grid.Row="1" VerticalAlignment="Top" FontSize="20"/>
+        <Label Name ="StatusLabel" Content="Add some control points" HorizontalAlignment="Left" Height="38" Margin="488,312,0,0" Grid.Row="1" VerticalAlignment="Top"
+               FontSize="20" FontWeight="Bold"/>
+        <Label Name="mousePos" Content="/pos" HorizontalAlignment="Left" Height="27" Margin="503,350,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Name ="Indexshape" Content="Label" HorizontalAlignment="Left" Margin="503,377,0,0" Grid.Row="1" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
