--- a/SierpinskiAttractor/MainWindow.xaml
+++ b/SierpinskiAttractor/MainWindow.xaml
@@ -37,6 +37,7 @@
         <Button Content="Run" HorizontalAlignment="Left" Margin="471,366,0,0" VerticalAlignment="Top" Width="140" RenderTransformOrigin="0.504,0.286" Height="22" Click="Run_Click"/>
         <Button Content="Clear" HorizontalAlignment="Left" Margin="633,366,0,0" VerticalAlignment="Top" Width="140" RenderTransformOrigin="0.516,0.613" Height="22" Click="Clear_Click"/>
         <Canvas Name ="DaCanvas" HorizontalAlignment="Left" Height="472" VerticalAlignment="Top" Width="455" Background="#FFDDDDDD"
+                ClipToBounds="True"
                 MouseMove="DaCanvas_MouseMove_1"
                 MouseRightButtonUp="setControlPoint"
                 MouseLeftButtonDown="dragPoint"
