--- a/SierpinskiAttractor/MainWindow.xaml
+++ b/SierpinskiAttractor/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="SierpinskiAttractor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="500" Width="800" ResizeMode="NoResize">
+        Title="Sierpinski Attractor" Height="500" Width="800" ResizeMode="NoResize">
     <Grid x:Name="Layout" Background="White">
         <Canvas HorizontalAlignment="Left" Height="37" Margin="455,-1,0,0" VerticalAlignment="Top" Width="339" Background="#FF6699CC">
             <Label Content="Sierpinski Attractor" HorizontalAlignment="Left" VerticalAlignment="Top" FontWeight="Bold" FontSize="18" Canvas.Left="2" Foreground="White"/>
